--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,43 +2,83 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/gradient"
     android:gravity="center"
     android:orientation="vertical">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/googleg_standard_color_18" />
+        android:layout_marginTop="80dp"
+        android:scaleX="1.5"
+        android:scaleY="1.5"
+        android:src="@mipmap/ic_logo" />
 
     <EditText
+        android:id="@+id/et_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginRight="25dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="100sp"
+        android:drawableStart="@drawable/ic_user"
         android:fontFamily="@font/nunito"
-        android:hint="Id"
+        android:hint="Identificacion"
         android:inputType="textEmailAddress"
-        android:padding="30px"
-        android:id="@+id/et_email"/>
+        android:padding="15dp"
+        android:letterSpacing="0.1"
+        android:textColor="@color/colorAccent"
+        android:textColorHint="@color/hintColor"
+        android:drawablePadding="10sp"/>
 
     <EditText
+        android:id="@+id/et_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Password"
+        android:layout_marginRight="25dp"
+        android:layout_marginLeft="25dp"
+        android:drawableStart="@drawable/ic_password"
+        android:hint="Contraseña"
         android:inputType="textPassword"
-        android:padding="30px"
-        android:id="@+id/et_password"/>
+        android:letterSpacing=".1"
+        android:padding="15dp"
+        android:textColorHint="@color/hintColor"
+        android:textColor="@color/colorAccent"
+        android:drawablePadding="10sp"/>
 
     <Button
-        android:layout_width="wrap_content"
+        android:id="@+id/btn_login"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50px"
-        android:text="Login"
-        android:id="@+id/btn_login"/>
+        android:layout_marginRight="25dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/rounded_button"
+        android:padding="15dp"
+        android:text="ingresar"
+        android:textColor="@color/indentityColorTwo"
+        android:fontFamily="@font/nunito_extrabold"/>
 
-    <TextView
-        android:layout_width="wrap_content"
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="70px"
-        android:layout_marginTop="100px"
-        android:text="Ver mapa"
-        android:id="@+id/btn_mapa"/>
+        android:gravity="center_horizontal"
+        android:paddingTop="120sp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="No tengo cuenta."
+            android:textColor="@color/colorAccent"/>
+
+        <TextView
+            android:id="@+id/btn_mapa"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=" Registrame"
+            android:fontFamily="@font/nunito_extrabold"
+            android:textColor="@color/colorAccent"/>
+    </LinearLayout>
+
 </LinearLayout>
