--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -5,11 +5,6 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="vertical">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -22,7 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
             android:text="User name"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:id="@+id/tv_username"/>
         <TextView
             android:layout_width="wrap_content"
@@ -50,8 +45,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Services"
-            android:layout_marginTop="20pt"/>
-    </LinearLayout>
+            android:layout_marginTop="20pt"
+            android:fontFamily="@font/nunito_extrabold"
+            android:text="Services" />
+
 
 </LinearLayout>
