--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,8 +3,8 @@
     <!-- Base application theme. -->
     <style name="AppBaseTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimary">@color/indentityColorOne</item>
+        <item name="colorPrimaryDark">@color/indentityColorOne</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:fontFamily">@font/nunito</item>
     </style>
