--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,13 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FFFFFF</color>
+    <color name="colorClick">#f2f9ff</color>
     <color name="indentityColorOne">#a795e9</color>
     <color name="indentityColorTwo">#82a2d3</color>
     <color name="hintColor">#cbe0ea</color>
+
+    <integer-array name="androidcolors">
+        <item>@color/colorClick</item>
+        <item>@color/colorAccent</item>
+    </integer-array>
 </resources>
