--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,46 +18,49 @@
         android:id="@+id/et_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginRight="25dp"
         android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
         android:layout_marginTop="100sp"
+        android:background="@drawable/rounded_button"
+        android:drawablePadding="10sp"
         android:drawableStart="@drawable/ic_user"
         android:fontFamily="@font/nunito"
         android:hint="Identificacion"
         android:inputType="textEmailAddress"
-        android:padding="15dp"
         android:letterSpacing="0.1"
-        android:textColor="@color/colorAccent"
-        android:textColorHint="@color/hintColor"
-        android:drawablePadding="10sp"/>
+        android:padding="7dp"
+        android:textColor="@color/inputColor"
+        android:textColorHint="@color/hintColor" />
 
     <EditText
         android:id="@+id/et_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginRight="25dp"
         android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/rounded_button"
+        android:drawablePadding="10sp"
         android:drawableStart="@drawable/ic_password"
         android:hint="Contraseña"
         android:inputType="textPassword"
         android:letterSpacing=".1"
-        android:padding="15dp"
-        android:textColorHint="@color/hintColor"
-        android:textColor="@color/colorAccent"
-        android:drawablePadding="10sp"/>
+        android:padding="7dp"
+        android:textColor="@color/inputColor"
+        android:textColorHint="@color/hintColor"/>
 
     <Button
         android:id="@+id/btn_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginRight="25dp"
         android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
         android:layout_marginTop="40dp"
         android:background="@drawable/btn_selector"
+        android:fontFamily="@font/nunito_extrabold"
         android:padding="15dp"
         android:text="ingresar"
-        android:textColor="@color/indentityColorTwo"
-        android:fontFamily="@font/nunito_extrabold"/>
+        android:textColor="@color/indentityColorTwo" />
 
 
     <LinearLayout
@@ -70,15 +73,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="No tengo cuenta."
-            android:textColor="@color/colorAccent"/>
+            android:textColor="@color/colorAccent" />
 
         <TextView
             android:id="@+id/btn_register"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=" Registrame"
             android:fontFamily="@font/nunito_extrabold"
-            android:textColor="@color/colorAccent"/>
+            android:text=" Registrame"
+            android:textColor="@color/colorAccent" />
     </LinearLayout>
 
 </LinearLayout>
