--- a/app/src/main/res/layout/activity_reserva.xml
+++ b/app/src/main/res/layout/activity_reserva.xml
@@ -4,14 +4,62 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/tv_status"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:text="Id"
+        android:textColor="@color/inputColor"
+        android:textSize="25sp" />
+
+    <TextView
+        android:id="@+id/tv_id"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:text="Estado actual"
+        android:textColor="@color/inputColor" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tv_status"/>
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:paddingTop="50dp"
+        android:text="Hora de inicio"
+        android:textColor="@color/inputColor" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:hint="Hora" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:text="Hora de finalizar"
+        android:textColor="@color/inputColor" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:hint="Hora" />
+
     <Button
+        android:id="@+id/btn_reservar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="reservar"
-        android:id="@+id/btn_reservar"/>
+        android:layout_marginTop="40dp"
+        android:text="reservar" />
 
 </LinearLayout>
