Cambio en la lectura del mapa para poder agregar reservas más fácil y efectivo a la hora de leer

--- a/app/src/main/res/layout/activity_reserva_ahora.xml
+++ b/app/src/main/res/layout/activity_reserva_ahora.xml
@@ -16,18 +16,20 @@
         android:layout_height="wrap_content"
         android:text="Hora de inicio"/>
 
-    <Spinner
+    <EditText
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:id="@+id/et_inicio"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hora de finalización"/>
 
-    <Spinner
+    <EditText
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:id="@+id/et_fin"/>
 
     <Button
         android:layout_width="wrap_content"
