--- a/app/src/main/res/layout/fragment_notify.xml
+++ b/app/src/main/res/layout/fragment_notify.xml
@@ -6,9 +6,24 @@
     tools:context=".NotifyFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Notify" />
+        android:orientation="vertical"
+        >
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:text="Time left for la reserva"
+            android:layout_marginTop="25dp"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textSize="35sp"
+            android:text="Timer"
+            android:id="@+id/tv_timer"/>
 
+    </LinearLayout>
 </FrameLayout>
