--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -34,6 +34,14 @@
         <Button
             android:layout_width="250dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:text="Reservar ahora"
+            android:id="@+id/btn_reserva"/>
+
+
+        <Button
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
             android:text="Logout"
             android:id="@+id/btn_logout"/>
 
