Poniendo todo bello

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp"
         android:layout_marginTop="100sp"
-        android:background="@drawable/rounded_button"
+        android:background="@drawable/et_style"
         android:drawablePadding="10sp"
         android:drawableStart="@drawable/ic_user"
         android:fontFamily="@font/nunito"
@@ -39,7 +39,7 @@
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp"
         android:layout_marginTop="10dp"
-        android:background="@drawable/rounded_button"
+        android:background="@drawable/et_style"
         android:drawablePadding="10sp"
         android:drawableStart="@drawable/ic_password"
         android:hint="Contraseña"
@@ -47,7 +47,7 @@
         android:letterSpacing=".1"
         android:padding="7dp"
         android:textColor="@color/inputColor"
-        android:textColorHint="@color/hintColor"/>
+        android:textColorHint="@color/hintColor" />
 
     <Button
         android:id="@+id/btn_login"
