--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,8 +6,8 @@
     <color name="colorClick">#f2f9ff</color>
     <color name="indentityColorOne">#a795e9</color>
     <color name="indentityColorTwo">#82a2d3</color>
-    <color name="hintColor">#cbe0ea</color>
-    <color name="inputColor">#8b9aa3</color>
+    <color name="hintColor">#FFFFFF</color>
+    <color name="inputColor">#80f2f2f2</color>
 
     <integer-array name="androidcolors">
         <item>@color/colorClick</item>
