--- a/app/src/main/res/layout/activity_reserva.xml
+++ b/app/src/main/res/layout/activity_reserva.xml
@@ -38,7 +38,8 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp"
-        android:hint="Hora" />
+        android:hint="Hora"
+        android:id="@+id/et_inicio"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -53,7 +54,8 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp"
-        android:hint="Hora" />
+        android:hint="Hora"
+        android:id="@+id/et_fin"/>
 
     <Button
         android:id="@+id/btn_reservar"
