--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,14 @@
     </style>
 
     <style name="AppTheme" parent="AppBaseTheme">
+    <item name="android:editTextStyle">@style/et_style</item>
 
     </style>
+
+    <style name="et_style" parent="android:Widget.Holo.EditText">
+        <item name="android:background">@drawable/et_style</item>
+        <item name="android:textColor">#808080</item>
+        <item name="android:layout_height">45dip</item>
+    </style>
+    
 </resources>
