--- a/app/src/main/res/layout/activity_reserva_ahora.xml
+++ b/app/src/main/res/layout/activity_reserva_ahora.xml
@@ -1,40 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:background="@drawable/gradient"
     android:gravity="center"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <EditText
+    android:orientation="vertical">
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Codigo del lugar"
-        android:id="@+id/et_code"/>
+        android:textAlignment="center"
+        android:fontFamily="@font/nunito_extrabold"
+        android:text="Reserva Ya!"
+        android:textSize="45sp"
+        android:textColor="@color/colorAccent"/>
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hora de inicio"/>
-
-    <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/et_inicio"/>
+        android:layout_marginLeft="35dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginTop="40dp"
+        android:textColor="@color/colorAccent"
+        android:text="Código del lugar" />
+
+    <EditText
+        android:id="@+id/et_code"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/et_style"
+        android:hint="Codigo"
+        android:inputType="number"
+        android:letterSpacing=".1"
+        android:padding="10dp"
+        android:textColor="@color/hintColor"
+        android:textColorHint="@color/inputColor" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hora de finalización"/>
-
-    <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/et_fin"/>
+        android:layout_marginLeft="35dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginTop="40dp"
+        android:textColor="@color/colorAccent"
+        android:text="Hora de inicio" />
+
+    <EditText
+        android:id="@+id/et_inicio"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/et_style"
+        android:hint="Hora"
+        android:inputType="number"
+        android:letterSpacing=".1"
+        android:padding="10dp"
+        android:textColor="@color/hintColor"
+        android:textColorHint="@color/inputColor"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="35dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginTop="40dp"
+        android:textColor="@color/colorAccent"
+        android:text="Hora de finalización" />
+
+    <EditText
+        android:id="@+id/et_fin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/et_style"
+        android:hint="Hora"
+        android:inputType="number"
+        android:letterSpacing=".1"
+        android:padding="10dp"
+        android:textColor="@color/hintColor"
+        android:textColorHint="@color/inputColor" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/btn_reserva"
-        android:text="reservar"/>
+        style="@style/Base.Widget.AppCompat.Button.Borderless"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/btn_selector"
+        android:fontFamily="@font/nunito_extrabold"
+        android:padding="15dp"
+        android:text="Reservar"
+        android:textColor="@color/indentityColorTwo" />
 
 </LinearLayout>
