When vales verga

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,7 +60,7 @@
         android:fontFamily="@font/nunito_extrabold"
         android:padding="15dp"
         android:text="ingresar"
-        android:textColor="@color/indentityColorTwo" />
+        android:textColor="@color/nav_item_color" />
 
 
     <LinearLayout
