--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Map"
-    android:background="@drawable/gradient">
+    tools:context=".Map">
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
