--- a/app/src/main/res/layout/activity_reserva.xml
+++ b/app/src/main/res/layout/activity_reserva.xml
@@ -7,61 +7,81 @@
 
     <TextView
         android:id="@+id/tv_status"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
-        android:text="Id"
-        android:textColor="@color/inputColor"
-        android:textSize="25sp" />
-
-    <TextView
-        android:id="@+id/tv_id"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
-        android:text="Estado actual"
-        android:textColor="@color/inputColor" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
-        android:paddingTop="50dp"
-        android:text="Hora de inicio"
-        android:textColor="@color/inputColor" />
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
-        android:hint="Hora"
-        android:id="@+id/et_inicio"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
-        android:text="Hora de finalizar"
-        android:textColor="@color/inputColor" />
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
-        android:hint="Hora"
-        android:id="@+id/et_fin"/>
-
-    <Button
-        android:id="@+id/btn_reservar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:text="reservar" />
+        android:fontFamily="@font/nunito_extrabold"
+        android:text="status"
+        android:textColor="@color/textoTitulo"
+        android:textSize="35sp" />
+
+    <TextView
+        android:id="@+id/tv_id"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:text="Cubiculo"
+        android:textColor="@color/textoTitulo" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="35dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginTop="20dp"
+        android:text="Hora de inicio"
+        android:textColor="@color/textoTitulo" />
+
+    <EditText
+        android:id="@+id/et_inicio"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/input_style"
+        android:hint="Hora"
+        android:inputType="number"
+        android:letterSpacing=".1"
+        android:padding="10dp"
+        android:textColor="@color/hintColor"
+        android:textColorHint="@color/inputColor" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="35dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginTop="20dp"
+        android:text="Hora de finalización"
+        android:textColor="@color/textoTitulo" />
+
+    <EditText
+        android:id="@+id/et_fin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/input_style"
+        android:hint="Hora"
+        android:inputType="number"
+        android:letterSpacing=".1"
+        android:padding="10dp"
+        android:textColor="@color/hintColor"
+        android:textColorHint="@color/inputColor" />
+
+    <Button
+        android:id="@+id/btn_reservar"
+        style="@style/Base.Widget.AppCompat.Button.Borderless"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/btn_selector"
+        android:fontFamily="@font/nunito_extrabold"
+        android:paddingRight="35dp"
+        android:paddingLeft="35dp"
+        android:text="Reservar"
+        android:textColor="@color/nav_item_color" />
 
 </LinearLayout>
