--- a/app/src/main/res/layout/activity_reserva_ahora.xml
+++ b/app/src/main/res/layout/activity_reserva_ahora.xml
@@ -19,9 +19,9 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="35dp"
         android:layout_marginRight="25dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:textColor="@color/colorAccent"
-        android:text="Código del lugar" />
+        android:text="Número de cubículo" />
 
     <EditText
         android:id="@+id/et_code"
@@ -29,57 +29,9 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:background="@drawable/et_style"
         android:hint="Codigo"
-        android:inputType="number"
-        android:letterSpacing=".1"
-        android:padding="10dp"
-        android:textColor="@color/hintColor"
-        android:textColorHint="@color/inputColor" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="35dp"
-        android:layout_marginRight="25dp"
-        android:layout_marginTop="40dp"
-        android:textColor="@color/colorAccent"
-        android:text="Hora de inicio" />
-
-    <EditText
-        android:id="@+id/et_inicio"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/et_style"
-        android:hint="Hora"
-        android:inputType="number"
-        android:letterSpacing=".1"
-        android:padding="10dp"
-        android:textColor="@color/hintColor"
-        android:textColorHint="@color/inputColor"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="35dp"
-        android:layout_marginRight="25dp"
-        android:layout_marginTop="40dp"
-        android:textColor="@color/colorAccent"
-        android:text="Hora de finalización" />
-
-    <EditText
-        android:id="@+id/et_fin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="25dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/et_style"
-        android:hint="Hora"
         android:inputType="number"
         android:letterSpacing=".1"
         android:padding="10dp"
