--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -23,8 +23,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
+            android:fontFamily="@font/nunito_extrabold"
             android:text="User name"
-            android:textColor="@color/nav_item_color"
+            android:textColor="@color/textoTitulo"
             android:textSize="20sp" />
 
         <TextView
@@ -32,36 +33,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Email"
-            android:textColor="@color/nav_item_color" />
-
-        <Button
-            android:id="@+id/btn_reserva"
-            style="@style/Base.Widget.AppCompat.Button.Borderless"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="25dp"
-            android:layout_marginRight="25dp"
-            android:layout_marginTop="40dp"
-            android:background="@drawable/btn_selector"
-            android:fontFamily="@font/nunito_extrabold"
-            android:padding="15dp"
-            android:text="Reservar ahora"
-            android:textColor="@color/indentityColorTwo" />
+            android:textColor="@color/textoNormal" />
 
 
         <Button
             android:id="@+id/btn_logout"
             style="@style/Base.Widget.AppCompat.Button.Borderless"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="25dp"
-            android:layout_marginRight="25dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="40dp"
             android:background="@drawable/btn_selector"
             android:fontFamily="@font/nunito_extrabold"
-            android:padding="15dp"
+            android:paddingLeft="35dp"
+            android:paddingRight="35dp"
             android:text="Logout"
-            android:textColor="@color/indentityColorTwo" />
+            android:textColor="@color/nav_item_color" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -69,7 +55,7 @@
             android:layout_marginTop="20pt"
             android:fontFamily="@font/nunito_extrabold"
             android:text="Services"
-            android:textColor="@color/nav_item_color" />
+            android:textColor="@color/textoNormal" />
 
 
     </LinearLayout>
